feat: 使用 enum 並修改儲存邏輯
