# src/controllers/data/get_ads_req.go
@@ -1,12 +1,16 @@
 package data
 
+import (
+	"github.com/Madfater/AdDeliveryLink/enum"
+)
+
 type GetAdsReq struct {
-	Offset   *int   `form:"offset" validate:"omitempty,gte=0"`
-	Limit    *int   `form:"limit" validate:"omitempty,gte=1,lte=100"`
-	Age      *int   `form:"age" validate:"omitempty,gte=1,lte=100"`
-	Gender   string `form:"gender" validate:"omitempty,oneof=F M"`
-	Country  string `form:"country" validate:"omitempty,country_code"`
-	Platform string `form:"platform" validate:"omitempty,oneof=ios android web"`
+	Offset   *int             `form:"offset" validate:"omitempty,gte=0"`
+	Limit    *int             `form:"limit" validate:"omitempty,gte=1,lte=100"`
+	Age      *int             `form:"age" validate:"omitempty,gte=1,lte=100"`
+	Gender   enum.Gender      `form:"gender" validate:"omitempty" binding:"required,enum"`
+	Country  enum.CountryCode `form:"country" validate:"omitempty" binding:"required,enum"`
+	Platform enum.Platform    `form:"platform" validate:"omitempty" binding:"required,enum"`
 }
 
 func (req GetAdsReq) Validate() (bool, error) {
