# src/entity/country.go
@@ -1,7 +1,9 @@
 package entity
 
+import "github.com/Madfater/AdDeliveryLink/enum"
+
 type Country struct {
-	CountryCode string `gorm:"many2many:advertisement_country;primaryKey;column:CountryCode"`
+	CountryCode enum.CountryCode `gorm:"many2many:advertisement_country;primaryKey;column:country_code"`
 }
 
 func (Country) TableName() string {
