# src/entity/platform.go
@@ -1,7 +1,9 @@
 package entity
 
+import "github.com/Madfater/AdDeliveryLink/enum"
+
 type Platform struct {
-	PlatformName string `gorm:"many2many:advertisement_platform;primaryKey;column:PlatformName"`
+	PlatformName enum.Platform `gorm:"many2many:advertisement_platform;primaryKey;column:platform_name"`
 }
 
 func (Platform) TableName() string {
